<resources>
    <string name="app_name">MyCart</string>
    <string name="nav_header_title">MyCart</string>
    <string name="action_search">Поиск</string>
    <string name="action_share">Поделиться</string>
    <string name="action_favorite">Избранное</string>
    <string name="action_cart">Корзина</string>
    <string name="action_clear">Очистить</string>

    <string name="menu_home">Рецепты</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_cart">Список покупок</string>
    <string name="menu_detail">Рецепты</string>

    <string name="receipt_thumb">Миниатюра рецепта</string>
    <string name="receipt_image">Большая картинка рецепта</string>
    <string name="action_delete_favorite">Удалить из избранного</string>
    <string name="empty_favorite">У Вас нет ни одного рецепта в «Избранном». Откройте понравившийся рецепт и нажмите сердечко в правом верхнем углу.</string>
    <string name="empty_home">К сожалению, нет связи с сервером. Проверьте интернет соединение.</string>
    <string name="empty_cart">В корзину покупок еще ничего не добавлено. Откройте понравившийся рецепт и выберите ингредиенты, которые надо докупить.</string>
    <string name="stub_receipt_name">Пример названия рецепта</string>
    <string name="stub_receipt_time">(=) 10 мин.</string>
    <string name="stub_receipt_portion">(=) 5 порц.</string>

    <string name="holder_time">[time-icon]</string>
    <string name="template_time">[time-icon] %1$d мин.</string>
    <string name="holder_portion">[portion-icon]</string>
    <string name="template_portion">[portion-icon] %1$d порц.</string>

    <string name="tab_components">Ингредиенты</string>
    <string name="tab_steps">Приготовление</string>
    <string name="empty_components">Какой-то странный рецепт из ничего :)</string>
    <string name="empty_steps">Какой-то странный рецепт, который не надо готовить :)</string>
    <string name="stub_component_name">Пример названия ингредиента</string>
    <string name="stub_component_count">1 шт</string>
    <string name="action_component_check">Добавить в корзину</string>
</resources>