<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.maffin.recipes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.maffin.recipes.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_nav_favorite_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.maffin.recipes.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.maffin.recipes.ui.detail.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_nav_detail_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/tab_components"
        android:name="com.maffin.recipes.ui.detail.components.TabComponents"
        android:label="@string/tab_components"
        tools:layout="@layout/tab_components" >
    </fragment>

    <fragment
        android:id="@+id/tab_steps"
        android:name="com.maffin.recipes.ui.detail.steps.TabSteps"
        android:label="@string/tab_steps"
        tools:layout="@layout/tab_steps" >
    </fragment>
</navigation>