<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_outline_share_24"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:orderInCategory="200"
        android:title="@string/action_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:orderInCategory="300"
        android:title="@string/action_cart"
        app:showAsAction="always"
        app:actionLayout="@layout/notification_layout" />
</menu>