<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_recycled"
            android:icon="@drawable/ic_outline_fastfood_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_receipt_long_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_outline_shopping_cart_24"
            android:title="@string/menu_cart" />
    </group>
</menu>