<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <!-- Миниатюра рецепта -->
    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="6dip"
        android:src="@drawable/ic_cook_thumb"
        android:contentDescription="@string/receipt_thumb"/>

    <!-- Кнопка удаления -->
    <ImageView
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dip"
        android:contentDescription="@string/action_delete_favorite"
        android:src="@drawable/ic_baseline_delete_outline_24" />

    <!-- Первая строка -->
    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/thumbnail"
        android:layout_toStartOf="@id/action"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/stub_receipt_name" />

    <!-- Вторая строка -->
    <TextView
        android:id="@+id/description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/thumbnail"
        android:paddingRight="10dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="10sp"
        android:text="@string/stub_receipt_time" />

    <TextView
        android:id="@+id/description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/description1"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="10sp"
        android:text="@string/stub_receipt_energy"/>

</RelativeLayout>

