<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/detail_backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/receipt_image"
        android:src="@drawable/ic_cooking_chef_opacity" />

    <LinearLayout
        android:id="@+id/detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_bg"
        android:layout_marginTop="200dp" >

        <!-- Название рецепта -->
        <TextView
            android:id="@+id/receipt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/stub_receipt_name"
            android:textSize="20sp"
            />

        <!-- Красивая полосочка под заголовком -->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- Вторая строка -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:padding="3sp">

            <!-- Время приготовления -->
            <TextView
                android:id="@+id/receiptTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:text="@string/stub_receipt_time"
                android:textSize="14sp" />

            <!-- Кол-во порций -->
            <TextView
                android:id="@+id/receiptPortion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/receiptTime"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/stub_receipt_portion"
                android:textSize="14sp" />
        </RelativeLayout>

        <!-- Вкладки с ингредиентами и шагами -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_onSecondary"
            android:minHeight="?attr/actionBarSize"
            app:tabMode="fixed"
            app:tabIndicatorColor="@color/md_theme_light_primary"
            app:tabTextColor="@color/text_tab_indicator"
            app:tabIndicatorHeight="2dp"
            app:tabTextAppearance="@style/MyCustomTextAppearance"/>

        <!-- Компонент для управления вкладками -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"/>
    </LinearLayout>


</RelativeLayout>