<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        android:elevation="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <!-- Большая картинка рецепта -->
            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="210sp"
                android:src="@drawable/ic_cooking_chef_opacity"
                android:contentDescription="@string/receipt_thumb" />

            <!-- Вторая строка -->
            <RelativeLayout
                android:id="@+id/second_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail"
                android:layout_marginStart="5sp"
                android:padding="3sp">

                <TextView
                    android:id="@+id/description1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:text="@string/stub_receipt_time"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/description1"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/stub_receipt_energy"
                    android:textSize="14sp" />
            </RelativeLayout>

            <!-- Первая строка -->
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_row"
                android:layout_marginStart="5sp"
                android:text="@string/stub_receipt_name"
                android:textSize="20sp"
                android:padding="3sp"
                android:textFontWeight="700"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
